feat: add input-with-label component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <app-input-with-label />
+  <input-with-label label='E-mail' placeholder='Digite seu e-mail...' />
 </main>
 
 <router-outlet />
