--- a/frontend/src/app/features/outside/components/input-with-label/input-with-label.component.html
+++ b/frontend/src/app/features/outside/components/input-with-label/input-with-label.component.html
@@ -1,1 +1,4 @@
-<p>input-with-label works!</p>
+<div class="input-container">
+  <label class="input-label">{{ label() }}</label>
+  <input class="input-content light-shadow" type="text" name="input" [placeholder]="placeholder()" />
+</div>
