feat: add orange colors to colors

--- a/frontend/src/colors.scss
+++ b/frontend/src/colors.scss
@@ -8,3 +8,8 @@ $brown-6: #d9cbc8;
 $white-1: #e6dddb;
 $white-2: #f3eeed;
 $white-3: #f9f7f7;
+
+$orange-1: #792611;
+$orange-2: #A53013;
+$orange-3: #CC3914;
+$orange-4: #F04D24;
