feat: create orange-button component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <input-with-label label='E-mail' placeholder='Digite seu e-mail...' />
+  <orange-button text="Login" />
 </main>
 
 <router-outlet />
