feat: create internal-header for desktop

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -16,6 +16,10 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
 }
 
+.layout {
+  padding: 0 10%;
+}
+
 @font-face {
   font-family: 'Poppins';
   src: url('assets/fonts/Poppins/Poppins-Light.ttf') format('truetype');
