feat: add responsiveness into inside-header

--- a/frontend/src/app/features/inside/components/inside-header/inside-header.component.html
+++ b/frontend/src/app/features/inside/components/inside-header/inside-header.component.html
@@ -15,5 +15,8 @@
     <span class="user-background-circle">
       <fa-icon class="user-icon" [icon]='faUser' />
     </span>
+    <button class="menu-button" type="button">
+      <fa-icon class="menu-icon" [icon]='faBars' />
+    </button>
   </div>
 </header>
