feat: add search-bar component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main>
-  <inside-header />
+<main class="layout">
+  <search-bar placeholder="Pesquise por algum alimento..." />
 </main>
 
 <router-outlet />
