feat: add the initial food-indicators-view component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="layout">
-  <search-bar placeholder="Pesquise por algum alimento..." />
+  <food-indicators-view [kcal]=10 [carbohydrates]=10 [lipids]=10 [proteins]=10 [water]=10 [fibers]=10 />
 </main>
 
 <router-outlet />
