--- a/frontend/src/colors.scss
+++ b/frontend/src/colors.scss
@@ -4,6 +4,7 @@ $brown-3: #735d57;
 $brown-4: #897a76;
 $brown-5: #c1ada8;
 $brown-6: #d9cbc8;
+$brown-7: #AC755D;
 
 $white-1: #e6dddb;
 $white-2: #f3eeed;
@@ -13,3 +14,10 @@ $orange-1: #792611;
 $orange-2: #A53013;
 $orange-3: #CC3914;
 $orange-4: #F04D24;
+
+$wine-1: #892E2E;
+
+$yellow-1: #D2A267;
+$yellow-2: #FFA83F;
+
+$blue-1: #257E97;
